@@ -1,3 +1,8 @@
+Sat Nov  6 15:28:11 MET 1999  Sven Neumann <sven@gimp.org>
+
+	* app/gdisplay.h: Reverted my latest change. It disturbed image 
+	rendering. 	
+
 Sat Nov  6 14:13:12 MET 1999  Sven Neumann <sven@gimp.org>
 
 	* app/drawable_cmds.c
